<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main2Activity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Моя учебная программа</string>
    <string name="nav_header_subtitle">mbogat@yandex.ru</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="about">О разработчике</string>
    <string name="menu_share" />
    <string name="menu_send" />
    <string name="menu_tools" />
</resources>
